# waloy

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
benches/: compression.rs  encryption.rs
src/: compression.rs  compression_lz4.rs  compression_zstd.rs  config.rs  encryption.rs  error.rs  lib.rs  manager.rs  manifest.rs  s3.rs  stats.rs
tests/: integration.rs  integration_axum.rs  integration_cli.rs  integration_perf.rs
