[package]
name = "waloy"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.38.0", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
rust-s3 = "0.35"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Optional: compression
lz4_flex = { version = "0.11", optional = true }
zstd = { version = "0.13", optional = true }

# Optional: encryption
aes-gcm = { version = "0.10", optional = true }
argon2 = { version = "0.5", optional = true }
rand = { version = "0.8", optional = true }

# Optional: CLI
clap = { version = "4", features = ["derive", "env"], optional = true }
anyhow = { version = "1", optional = true }

[features]
default = []
compression-lz4 = ["lz4_flex"]
compression-zstd = ["zstd"]
compression = ["compression-lz4", "compression-zstd"]
encryption = ["aes-gcm", "argon2", "rand"]
cli = ["clap", "anyhow"]
full = ["compression", "encryption", "cli"]

[[bin]]
name = "waloy"
path = "src/bin/waloy.rs"
required-features = ["cli"]

[[test]]
name = "integration_cli"
required-features = ["cli"]

[dev-dependencies]
tempfile = "3"
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "compression"
harness = false
required-features = ["compression"]

[[bench]]
name = "encryption"
harness = false
required-features = ["encryption"]
